@@ -1,2 +1,0 @@
-python_games.hash
-python_games.tar.gz
