@@ -11,3 +11,5 @@ claws-mail
 greenfoot bluej
 nodered
 realvnc-vnc-viewer
+
+python-games
