@@ -1,3 +1,3 @@
-libreoffice-sdbc-hsqldb
+libreoffice-pi
 libreoffice-help-en-gb
 libreoffice-l10n-en-gb
